resolve parte da bagunça do git

--- a/26.2/exercicios/package.json
+++ b/26.2/exercicios/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "exercises",
+  "name": "exercicios",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,7 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ts-node": "^10.6.0",
-    "typescript": "^4.6.2"
+    "readline-sync": "^1.4.10",
+    "ts-node": "^10.5.0"
+  },
+  "devDependencies": {
+    "@types/readline-sync": "^1.4.4"
   }
 }
