--- a/30.1/tsconfig.json
+++ b/30.1/tsconfig.json
@@ -2,9 +2,14 @@
   "compilerOptions": {
     "target": "es2016",
     "module": "commonjs",
+    "outDir": "./dist",
+    "typeRoots": [
+      "src/@types",
+      "./node_modules/@types"
+    ],
+    "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "skipLibCheck": true,                                 /* Skip type checking all .d.ts files. */
-    "outDir": "./dist"
-  }
+    "skipLibCheck": true,
+  },
 }
