--- a/30.1/package.json
+++ b/30.1/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
-    "mongoose": "^6.3.1"
+    "mongoose": "^6.3.1",
+    "zod": "^3.14.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
